--- a/css/hotel.css
+++ b/css/hotel.css
@@ -1,3 +1,8 @@
+#pagina{
+	background-color: #000000;
+	color: #ffffff;
+	margin: 0;
+}
 .fundo{
 	background-image:url('../image/piscina.jpg');
 	background-repeat: no-repeat;
@@ -7,9 +12,19 @@
 }
 
  .texto{   
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 	font-family: Staatliches;
 	text-align:center;
 	letter-spacing: 1px;
-	font-size: 20px;
+	font-size: 30px;
 }
+
+.titulo{   
+    color: rgb(0, 0, 0);
+	font-family: Staatliches;
+	text-align:center;
+	letter-spacing: 1px;
+	font-size: 40px;
+	text-shadow:1px 1px 3px #000;
+}
+
