--- a/css/hotel.css
+++ b/css/hotel.css
@@ -26,12 +26,12 @@
 }
 .button {
 	display:inline-block;
-	border-radius: 4px;
+	border-radius: 10px;
 	background-color: #42f12b;
 	border: none;
 	color: #FFFFFF;
 	text-align: center;
-	font-size: 21px;
+	font-size: 20px;
 	padding: 20px;
 	width: 200px;
 	transition: all 0.5s;
@@ -88,7 +88,7 @@
 	border-radius: 25px;
 }
 .caixa1{
-	font-family:Staatliche ;
+	font-family:Staatliches ;
 	font-size: 20px;
 	text-align: center;
 	width: 10%;
