--- a/css/index.css
+++ b/css/index.css
@@ -194,8 +194,21 @@ h3{
 }
 .texto{
 	text-align: center;
-	font-family: sans-serif;
+	font-family: Staatliches;
 	font-size: 25px;
 	margin-top: -50px;
+}
+.caixa{
+	font-family:Staatliches ;
+	font-size: 25px;
+	text-align: center;
+	width: 50%;
+	height: 10%;
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	margin: 55px;
+	border-radius: 10px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
