--- a/css/hotel.css
+++ b/css/hotel.css
@@ -116,6 +116,7 @@
 	border-radius: 25px;
 	font-family: 'Encode Sans', sans-serif;
 	font-size: 20px;
+	opacity: 70%;
 }
 nav{
 	text-align: center;
