--- a/css/index.css
+++ b/css/index.css
@@ -101,7 +101,7 @@ nav ul li a.ativo{
 	transition-duration: 0.5s;
 }
 .botao:hover{
-	background-color: #02ff96;
+	background: #02ff96;
     color: white;	
 }
 .button {
@@ -118,6 +118,7 @@ nav ul li a.ativo{
 	cursor: pointer;
 	margin: 5px;
 	font-family: Staatliches;
+	
   }
   
   .button span {
@@ -211,4 +212,6 @@ h3{
 	margin-left: auto;
 	margin-right: auto;
 }
+
+
 
